8365055: G1: Merge Heap Roots phase incorrectly clears young gen remembered set every time

Reviewed-by: kbarrett, iwalulya