src/hotspot/share/gc/g1/g1CollectionSet.cpp
@@ -323,7 +323,10 @@ double G1CollectionSet::finalize_young_part(double target_pause_time_ms, G1Survi
 
   verify_young_cset_indices();
 
-  double predicted_base_time_ms = _policy->predict_base_time_ms(pending_cards, _g1h->young_regions_cardset()->occupied());
+  size_t num_young_cards = _g1h->young_regions_cardset()->occupied();
+  _policy->record_card_rs_length(num_young_cards);
+
+  double predicted_base_time_ms = _policy->predict_base_time_ms(pending_cards, num_young_cards);
   // Base time already includes the whole remembered set related time, so do not add that here
   // again.
   double predicted_eden_time = _policy->predict_young_region_other_time_ms(eden_region_length) +
